# SpeechSense

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: main.yml  on-release-main.yml
data/: mock_stage_5.csv
docs/: index.md  modules.md  report.md
src/speechsense/: analyse.py  config.py  correction.py  correction_pipeline.py  initial_config.py  main.py  pipeline.py  validation.py
src/speechsense/data/: base_mongo.py  processed_db.py  transcript_db.py
src/speechsense/database/: base_mongo.py  processed_db.py  report_db.py  transcript_db.py
src/speechsense/speech_to_text/: __init__.py  diarization.py  main.py  pipeline.py  speech_to_text_pipeline.py  transcription.py  utils.py
tests/: conftest.py  mock_data.csv  test_analyse.py  test_correction.py  test_diarization.py  test_foo.py  test_transcription.py  test_validation.py
tests/data/: base_mongo_test.py
tests/database/: base_mongo_test.py
