[tool.poetry]
name = "speechsense"
version = "0.0.1"
description = "A speech processing pipeline"
authors = ["SpeechSense <SpeechSense>"]
repository = "https://github.com/SpeechSense/SpeechSense"
documentation = "https://speechsense.github.io/SpeechSense/"
readme = "README.md"
packages = [
  {include = "speechsense", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pandas = ">=2.0,<3.1"
requests = ">=2.31"
pymongo = {version = "^4.17.0", extras = ["srv"]}
python-dotenv = "^1.2.2"
vosk = "^0.3.45"

[tool.poetry.scripts]
correct-transcripts = "speechsense.correction_pipeline:main"
speechsense = "speechsense.speech_to_text.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pandas-stubs = ">=2.0"
pre-commit = "^3.4.0"
tox = "^4.11.1"
mongomock = "^4.3.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src/speechsense"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[[tool.mypy.overrides]]
module = ["vosk", "vosk.*"]
ignore_missing_imports = true
disallow_any_unimported = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

[tool.deptry.per_rule_ignores]
DEP002 = ["pyannote-audio", "soundfile", "torch", "pymongo"]
DEP003 = ["speechsense"]
